<resources>
    <string name="app_name">GDG Vizag</string>

    <string name="announced_soon">to be announced Soon…</string>
    <string name="devfest_2023">devfest 2023 @ Vizag</string>
    <string name="log_in_with_google">Sign in with Google</string>
    <string name="about_gdg_vizag">About GDG Vizag</string>
    <string name="about_gdg_vizag_info">GDG Vizag is a vibrant community of developer enthusiasts who are passionate about learning and building awesome products. The community comprises of professionals, freelancers and students from the ecosystem. This is a safe space where developers from all backgrounds come together to learn, share, ideate, collaborate and build awesome products with their expertise and learnings.</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="register">Register</string>
    <string name="there_are_no_upcoming_events">There are no upcoming events…</string>
    <string name="past_events">Past Events</string>
    <string name="there_are_no_past_events">There are no past events</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partners">Partners</string>
    <string name="organizers">Organizers</string>
    <string name="about_me">About Me</string>
    <string name="gallery">Gallery</string>
    <string name="details">Details</string>
    <string name="agenda">Agenda</string>
    <string name="speakers">Speakers</string>
    <string name="when">When</string>
    <string name="where">Where</string>
    <string name="about">About</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="your_events">Your Events</string>
    <string name="about_us">About Us</string>
    <string name="our_partners">Our Partners</string>
    <string name="our_organizers">Our Organizers</string>

    <string name="about_app">About App</string>
    <string name="app_version">v1.0.0</string>
    <string name="app_version_head">App Version</string>

    <string name="log_out">Log Out</string>
    <string name="log_out_message">Are you sure you want to Log Out…?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="dev_name">Rammohan Locharla</string>
    <string name="dev_about">CA Aspirant by academics &amp; Android Kotlin Developer by passion. \n \n Pet Lover, Music Lover, Foodie, sometimes cook.</string>
    <string name="code_name">code name</string>
    <string name="dev_code_name">Jungle Mystic</string>
    <string name="developer_info">Developer Info</string>

    <string name="your_name">Your Name <font color='#f9154a'>*</font></string>
    <string name="your_mail">Your Mail <font color='#f9154a'>*</font></string>
    <string name="phone_number">Phone Number <font color='#f9154a'>*</font></string>
    <string name="country_code">+91</string>
    <string name="gender">Preferred pronoun is <font color='#f9154a'>*</font></string>
    <string name="update">Update</string>

    <string name="event_registration">Event Registration</string>
    <string name="application_form">Application Form</string>
    <string name="career_status">Career Status <font color='#f9154a'>*</font></string>
    <string name="org_university">Organisation/ University <font color='#f9154a'>*</font></string>
    <string name="tech_domains_head">Tech Domains Interested/Experiences in <font color='#f9154a'>*</font></string>
    <string name="tech_domain_1">Web (Frontend and/or Backend)</string>
    <string name="tech_domain_2">Mobile (Android, iOS, Flutter, React Native, etc.)</string>
    <string name="tech_domain_3">Cloud</string>
    <string name="tech_domain_4">AI/ML</string>
    <string name="tech_domain_5">Web3/Blockchain</string>
    <string name="tech_domain_6">VR/AR/XR</string>
    <string name="tech_domain_7">Other</string>
    <string name="why_this_event_question">Why should you be at %1$s ? <font color='#f9154a'>*</font></string>
    <string name="github_link">Github Link</string>
    <string name="submit">Submit</string>
    <string name="application_status">Application Status:</string>
    <string name="application_accepted">Application Accepted…?</string>
    <string name="generate_ticket">Generate Ticket</string>
    <string name="no_submitted_applications_found">No submitted applications found</string>
    <string name="ticket_generated_text">Your ticket was generated…</string>
    <string name="go_to">Go to</string>
    <string name="no_tickets">No Tickets are generated…</string>
    <string name="show_ticket">Show Ticket</string>
    <string name="scan">Scan</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="application_id">Application ID :</string>
    <string name="applicant_details">Applicant Details</string>
    <string name="name_head">Name</string>
    <string name="application_not_found">Application not found…</string>
    <string name="check_in">Check In</string>
    <string name="already_checked_in">Already checked in...</string>

    <string-array name="gender_array">
        <item>he/him</item>
        <item>she/her</item>
        <item>they/them</item>
        <item>decline to specify</item>
    </string-array>

    <string-array name="cs_array">
        <item>Employee</item>
        <item>Student</item>
        <item>Freelancer</item>
        <item>Other</item>
        <item>decline to specify</item>
    </string-array>


</resources>