<?xml version="1.0" encoding="utf-8"?>
<layout>

    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/log_out_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/log_out"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold"/>

            <TextView
                android:id="@+id/log_out_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/log_out_title"
                app:layout_constraintStart_toStartOf="@id/log_out_title"
                android:layout_marginTop="20dp"
                android:text="@string/log_out_message"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_regular"/>

            <TextView
                android:id="@+id/no_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/log_out_message"
                app:layout_constraintBottom_toBottomOf="@id/yes_tv"
                app:layout_constraintEnd_toStartOf="@id/yes_tv"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:text="@string/no"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/gl_blue"
                android:fontFamily="@font/quicksand_regular"/>

            <TextView
                android:id="@+id/yes_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="30dp"
                android:text="@string/yes"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/gl_red"
                android:fontFamily="@font/quicksand_regular"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>