<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/organizer_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dev_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_info"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/gl_green"
                app:layout_constraintEnd_toEndOf="@id/dev_info_title"
                app:layout_constraintStart_toStartOf="@id/dev_info_title"
                app:layout_constraintTop_toBottomOf="@id/dev_info_title" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dev_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev_info_title"
                tools:src="@drawable/devfest_2023" />

            <TextView
                android:id="@+id/dev_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dev_name"
                android:textSize="18sp"
                android:fontFamily="@font/gotham_rounded_bold"
                app:layout_constraintTop_toTopOf="@id/dev_image"
                app:layout_constraintStart_toEndOf="@id/dev_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/gl_blue"/>

            <TextView
                android:id="@+id/dev_code_name_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/code_name"
                android:textSize="14sp"
                android:fontFamily="@font/quicksand_regular"
                app:layout_constraintTop_toBottomOf="@id/dev_name"
                app:layout_constraintStart_toStartOf="@id/dev_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:maxLines="2"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/dev_code_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dev_code_name"
                android:textSize="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/dev_code_name_head"
                app:layout_constraintStart_toStartOf="@id/dev_code_name_head"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/social_network_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dev_code_name"
                app:layout_constraintStart_toStartOf="@id/dev_code_name_head"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/dev_github_link"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/github_logo"
                    android:backgroundTint="@color/black"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/dev_youtube_link"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/youtube_icon" />

            </LinearLayout>

            <TextView
                android:id="@+id/about_me_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textSize="14sp"
                android:fontFamily="@font/quicksand_bold"
                app:layout_constraintTop_toBottomOf="@id/social_network_ll"
                app:layout_constraintStart_toStartOf="@id/dev_image"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/dev_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dev_about"
                android:textSize="14sp"
                android:fontFamily="@font/quicksand_regular"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/about_me_title"
                app:layout_constraintStart_toStartOf="@id/dev_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>