<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.EventDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back_icon"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_back_icon"
                        app:tint="@color/light_grey"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/fragment_label"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        tools:text="Event Name"
                        android:textSize="20sp"
                        android:textColor="@color/light_grey"
                        android:fontFamily="@font/gotham_rounded_bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/back_icon"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="2dp"
                        android:gravity="center_vertical"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/event_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:tabIndicatorColor="@color/gl_blue"
            app:tabSelectedTextColor="@color/gl_blue"
            app:tabIndicatorAnimationMode="elastic"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/details_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/gallery_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/agenda_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agenda"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/speakers_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speakers"/>

        </com.google.android.material.tabs.TabLayout>
        
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/event_viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/event_tab_layout"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>