<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.EditProfileFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back_icon"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_back_icon"
                        app:tint="@color/light_grey"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@null"/>

                    <TextView
                        android:id="@+id/fragment_label"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/edit_profile"
                        android:textSize="20sp"
                        android:textColor="@color/light_grey"
                        android:fontFamily="@font/gotham_rounded_bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/back_icon"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="2dp"
                        android:gravity="center_vertical"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            android:layout_marginTop="-5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/light_grey"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/profile_user_icon"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="30dp"
            app:boxStrokeColor="@color/gl_blue"
            app:boxStrokeWidth="1dp"
            android:hint="@string/your_name"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_mail_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile_name_til"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/gl_blue"
            app:boxStrokeWidth="1dp"
            android:hint="@string/your_mail"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_number_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile_mail_til"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/gl_blue"
            app:boxStrokeWidth="1dp"
            android:hint="@string/phone_number"
            app:hintTextColor="@color/black"
            app:prefixText="@string/country_code"
            app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:digits="0123456789"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_bold"
            android:maxLength="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender_til"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mobile_number_til"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/gl_blue"
            app:boxStrokeWidth="1dp"
            android:hint="@string/gender"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black">

            <AutoCompleteTextView
                android:id="@+id/gender_actv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:inputType="none"
                android:contentDescription="@null"
                android:importantForAccessibility="no"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>